--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -33,13 +33,13 @@ jobs:
       if: matrix.build_platform == 'x64' && matrix.build_configuration == 'Release'
       uses: actions/upload-artifact@v2
       with:
-          name: plugin_dll_x64
+          name: nppRandomStringGenerator.1.2.0.x64.zip
           path: nppRandomStringGenerator\bin\${{ matrix.build_configuration }}-x64\nppRandomStringGenerator.dll
 
     - name: Archive artifacts for x86
       if: matrix.build_platform == 'x86' && matrix.build_configuration == 'Release'
       uses: actions/upload-artifact@v2
       with:
-          name: plugin_dll_x86
+          name: nppRandomStringGenerator.1.2.0.x86.zip
           path: nppRandomStringGenerator\bin\${{ matrix.build_configuration }}\nppRandomStringGenerator.dll
 
