Add random length generation

--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -1,5 +1,5 @@
 appname=nppRandomStringGenerator
-appversion=1.5.0
+appversion=1.7.0
 NumericUpDownLength=32
 NumericUpDownQuantity=8
 CheckboxNumbers=true
@@ -18,3 +18,6 @@ RadioButtonInline=false
 TextboxSeperator=;
 CheckboxSaveOnClose=true
 CheckboxCloseNoMessage=true
+NumericUpDownRandomMin=16
+NumericUpDownRandomMax=64
+CheckboxDoRandom=False
