--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -1,5 +1,5 @@
 appname=nppRandomStringGenerator
-appversion=1.7.0
+appversion=1.8.0
 NumericUpDownLength=32
 NumericUpDownQuantity=8
 CheckboxNumbers=true
@@ -21,3 +21,4 @@ CheckboxCloseNoMessage=true
 NumericUpDownRandomMin=16
 NumericUpDownRandomMax=64
 CheckboxDoRandom=False
+CheckboxMTA=True
