Adds separate class to enable multithreading

--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -7,7 +7,7 @@ CheckboxLowercase=true
 CheckboxUppercase=true
 CheckboxBeginLetter=true
 CheckboxSymbols=true
-TextboxSymbols=!"#$%&'()*+,-./:;<=>?@[]^_`{|}~
+TextboxSymbols=!"#$%&'(\)*+,-./:;<=>?@[ ]^_`{|}~
 CheckboxSimilar=true
 CheckboxDuplicate=true
 CheckboxSequential=true
