--- a/nppRandomStringGenerator/nppRandomStringGenerator.csproj
+++ b/nppRandomStringGenerator/nppRandomStringGenerator.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Forms\About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\StringGenerator.cs" />
     <Compile Include="PluginInfrastructure\ClikeStringArray.cs" />
     <Compile Include="PluginInfrastructure\DllExport\DllExportAttribute.cs" />
     <Compile Include="Forms\ConfigAndGenerate.cs">
