#29 Guid generation added, need more testing

--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -1,5 +1,5 @@
 appname=nppRandomStringGenerator
-appversion=1.8.0
+appversion=1.9.0
 NumericUpDownLength=32
 NumericUpDownQuantity=8
 CheckboxNumbers=true
@@ -22,3 +22,6 @@ NumericUpDownRandomMin=16
 NumericUpDownRandomMax=64
 CheckboxDoRandom=False
 CheckboxMTA=True
+NumericUpDownGUIDQuantity=8
+ComboBoxGUIDFormat=D
+TabControl1=0
