--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -1,5 +1,5 @@
 appname=nppRandomStringGenerator
-appversion=1.9.0
+appversion=1.9.6
 NumericUpDownLength=32
 NumericUpDownQuantity=8
 CheckboxNumbers=true
@@ -12,6 +12,7 @@ CheckboxSimilar=true
 CheckboxDuplicate=true
 CheckboxSequential=true
 TextboxPrefix=my_prefix
+TextboxSuffix=my_suffix
 RadioButtonNew=true
 RadioButtonCurrent=false
 RadioButtonInline=false
@@ -25,3 +26,4 @@ CheckboxMTA=True
 NumericUpDownGUIDQuantity=8
 ComboBoxGUIDFormat=D
 TabControl1=0
+CheckboxDarkMode=True
