--- a/nppRandomStringGenerator/nppRandomStringGenerator.csproj
+++ b/nppRandomStringGenerator/nppRandomStringGenerator.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Forms\About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InsertGuid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InsertGuid.Designer.cs">
+      <DependentUpon>InsertGuid.cs</DependentUpon>
+    </Compile>
     <Compile Include="JSON_Tools\JNode.cs" />
     <Compile Include="JSON_Tools\JsonParser.cs" />
     <Compile Include="Modules\StringGenerator.cs" />
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigAndGenerate.resx">
       <DependentUpon>ConfigAndGenerate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InsertGuid.resx">
+      <DependentUpon>InsertGuid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
