Replace indicated text with random strings

--- a/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
+++ b/nppRandomStringGenerator/Storage/nppRandomStringGeneratorSettings.ini
@@ -1,5 +1,5 @@
 appname=nppRandomStringGenerator
-appversion=1.9.6
+appversion=1.9.8
 NumericUpDownLength=32
 NumericUpDownQuantity=8
 CheckboxNumbers=true
@@ -28,3 +28,5 @@ ComboBoxGUIDFormat=D
 TabControl1=0
 CheckboxDarkMode=True
 QuickGuidFormat=radioD
+TextboxReplace={{REPLACE}}
+RadioButtonReplace=false
